# KatZip

./: CMakeLists.txt  README.md  main  main.cpp
Input/: input.txt
Output/: decoded.txt  output.kat
Utils/: Decode.cpp  Decode.h  Encode.cpp  Encode.h  HuffmanTree.cpp  HuffmanTree.h  MinHeap.cpp  MinHeap.h
